--- a/app_server/views/partials/footer.hbs
+++ b/app_server/views/partials/footer.hbs
@@ -2,7 +2,7 @@
   <div>
     <ul class="navigation">
       <li>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
       </li>
       <li class="active">
         <a href=“/travel">Travel</a>
