--- a/app_admin/src/app/app.component.html
+++ b/app_admin/src/app/app.component.html
@@ -1,10 +1,11 @@
 <!-- <h1>{{ title }}</h1>
 <app-trip-listing></app-trip-listing> -->
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">{{ title }}</a>
   </div>
-</nav>
+</nav> -->
+<app-navbar></app-navbar>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
